fixed dependency-problems with Coco.View/Coco.ChildView require circle added testApplication

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Coco - 3m5. JavaScript SDK - 2014</title>
-        <link href="css/bootstrap.css" type="text/css" rel="stylesheet"/>
-        <link href="css/coco.css" type="text/css" rel="stylesheet"/>
+        <!--<link href="css/bootstrap.css" type="text/css" rel="stylesheet"/>-->
+        <!--<link href="css/coco.css" type="text/css" rel="stylesheet"/>-->
         <script type="text/javascript" src="js/vendor/jquery/jquery-1.10.2.js"></script>
         <script type="text/javascript" src="js/vendor/dejavu/dejavu.js"></script>
 
@@ -12,6 +12,6 @@
     </head>
     <body>
         <h3><img src="img/COCO.png" />Coco - 3m5. JavaScript SDK</h3>
-
+        <div class="testView"></div>
     </body>
 </html>
