--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,5 +13,6 @@
     <body>
         <h3><img src="img/COCO.png" />Coco - 3m5. JavaScript SDK</h3>
         <div class="testView"></div>
+        <div class="routerView"></div>
     </body>
 </html>
