removed es6 classes - typescript works! but only without ANY usage of dejavu!

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
         <!--<link href="css/bootstrap.css" type="text/css" rel="stylesheet"/>-->
         <!--<link href="css/coco.css" type="text/css" rel="stylesheet"/>-->
         <script type="text/javascript" src="js/vendor/jquery/jquery-1.10.2.js"></script>
+        <script type="text/javascript" src="js/vendor/traceur/traceur-runtime.js"></script>
         <script type="text/javascript" src="js/vendor/dejavu/dejavu.js"></script>
 
         <script type="text/javascript" src="js/application.js"></script>
